[project]
name = "argus-api-tester"
version = "0.1.0"
description = "Concurrent API security scanner for REST and SOAP, parses Postman or OpenAPI, CLI and Web UI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx[http2]>=0.27.0",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "typer>=0.12.3",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "Jinja2>=3.1",
  "sqlmodel>=0.0.21",
  "rich>=13.7",
  "orjson>=3.10",
  "reportlab>=4.2",
]

[project.scripts]
argus = "argus_api_tester.cli:app"
